tests/compError/aliasDoesNotExist_struct.ucl
// compError
// error: alias 'nonExistentAlias' does not exist on struct
// tests/compError/aliasDoesNotExist_struct.ucl:10 -> here

test = struct() {
	a = 1
	b = 2
}

test.nonExistentAlias